--- a/index.html
+++ b/index.html
@@ -1,57 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hacker Times</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <!-- NEWSPAPER CONTAINER -->
-  <div class="newspaper-container">
-    <!-- header -->
-    <header>
-      <div class="date">JANUARY 1, 1970</div>
-      <h1>The Hacker Times</h1>
-    </header>
-    <!-- navigation -->
-    <div id="navbar">
-      <nav>
-        <ul>
-          <li><a href="#">HTML & CSS</a></li>
-          <li><a href="#">UX & UI</a></li>
-          <li><a href="#">JAVASCRIPT</a></li>
-          <li><a href="#">EXPRESS</a></li>
-          <li><a href="#">MONGODB</a></li>
-          <li><a href="#">REACT</a></li>
-          <li><a href="#">CYBERSECURITY</a></li>
-          <li><a href="#">PYTHON</a></li>
-        </ul>
-      </nav>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>repl.it</title>
+    <link href="style.css" rel="stylesheet" type="text/css">
+  </head>
+  <body>
+    <div id="pic">
+      BIG FANCY PIC
     </div>
-    <!-- front page article -->
-    <main>
-      <h2>Have You Tried Turning It On and Off Again?</h2>
-      <h5>By Maurice Moss</h5>
-      <img src="assets/front-page-article.png" alt="placeholder">
-      <p>
-        Cupcake ipsum dolor sit amet. Candy gummies jelly-o pie toffee cheesecake pastry cake. Soufflé sesame snaps tootsie roll jelly-o soufflé tart gummies. Dessert lollipop halvah brownie chocolate bar gingerbread. Lollipop chocolate bar dragée jelly-o cookie tiramisu icing. Dragée muffin marshmallow jelly beans jelly beans. Tootsie roll pie cheesecake. Brownie biscuit gingerbread cupcake sweet roll sweet jelly-o cookie pie. Lemon drops topping lemon drops jelly beans toffee. Tiramisu cotton candy pie toffee cake chocolate cake apple pie. Cupcake bear claw donut apple pie halvah sesame snaps macaroon tootsie roll
-        </p>
-    </main>
-    <!-- more articles -->
-    <div class="more-articles">
-      <section>
-        <h4>Tabs vs. Spaces</h4>
-        <img src="assets/article-one.png" alt="placeholder">
-        <p>Lemon drops tiramisu sesame snaps oat cake marshmallow sugar plum liquorice. Tootsie roll pastry cake gummi bears pastry toffee tootsie roll candy. Pastry sesame snaps wafer liquorice. Gummies macaroon tiramisu jelly beans soufflé brownie ...</p>
-      </section>
-      <section>
-        <h4>How Much Caffeine Is Too Much?</h4>
-        <img src="assets/article-two.png" alt="placeholder">
-        <p>Lemon drops tiramisu sesame snaps oat cake marshmallow sugar plum liquorice. Tootsie roll pastry cake gummi bears pastry toffee tootsie roll candy. Pastry sesame snaps wafer liquorice. Gummies macaroon tiramisu jelly beans soufflé brownie ...</p>
-      </section>
+    <div id="icons">
+      <!-- TODO: spans for icons -->
     </div>
-  </div>
-</body>
+    <div id="mini-layout">
+      <!-- TODO: Spans for four-item wide mini-layout -->
+
+    <div>
+      <img src="http://placekitten.com/500/150" alt="Big Cat Pic">
+    </div>
+    <div>
+        <strong>Bold Title</strong>
+    </div>
+    <div>
+        <p>A description</p>
+    </div>
+    <div>
+        <a href="Your choice of link">Link text</a>
+    </div>
+    <span>
+        <div>
+            <img src="http://place-puppy.com/100x100" alt="Pic">
+        </div>
+        <div>
+            <strong>Silly Puppy</strong>
+        </div>
+        <div>
+            <p>So curious!</p>
+        </div>
+        <div>
+            <a href="http://place-puppy.com">More Dogs</a>
+        </div>
+    </span>
+    </div>
+  </body>
 </html>
